--- a/course.html
+++ b/course.html
@@ -65,16 +65,40 @@
             <span class="crum--hr">|</span>
             <span class="all--events"><a href="events.html">All Courses</a></span>
         </div>
-        <div class="all--courses--container">
+       <div class="all--courses--container">
             <div class="row online--course--row">
                 <div class="col col-xl-3 col-xxs col-md-6 col-sm-12">
                     <div class="card">
                         <p class="course--lesson"><span>10</span> Lessons</p>
-                        <img src="images/Sample Course.jpg" class="card-img-top" alt="">
+                        <img src="images/oimg2.jpg" class="card-img-top" alt="">
                         <div class="card-body">
-                            <h5 class="card-title"><a href="">Developing Environmental and Social Management...</a></h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam,
-                                qui.</p>
+                            <h5 class="card-title"><a href="https://www.adfiapanex.info/courses/development-banking-101/">Developing an Environmental and Social Risk Management...</a></h5>
+                            <img src="images/Dummy Man.jpg" alt="speakers photo">
+                            <p class="card-text">Mr. Enrique I. Florencio<br><span>Secretary General</span></p>
+                            <a href="https://www.adfiapanex.info/courses/development-banking-101/" class="btn btn-primary online--course--btn">Enroll Now!</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col col-xl-3 col-xxs col-md-6 col-sm-12">
+                    <div class="card">
+                        <p class="course--lesson"><span>10</span> Lessons</p>
+                        <img src="images/oimg3.jpg" class="card-img-top" alt="">
+                        <div class="card-body">
+                            <h5 class="card-title"><a href="https://www.adfiapanex.info/courses/mobile-photography-101/">Mobile Photography 101</a></h5>
+                            <img src="images/Dummy Man.jpg" alt="speakers photo">
+                            <p class="card-text">Mr. Rem Laodeño<br><span>IT Specialist</span></p>
+                            <a href="https://www.adfiapanex.info/courses/mobile-photography-101/" class="btn btn-primary online--course--btn">Enroll Now!</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col col-xl-3 col-xxs col-md-6 col-sm-12">
+                    <div class="card">
+                        <p class="course--lesson"><span>10</span> Lessons</p>
+                        <img src="images/oimg1.jpg" class="card-img-top" alt="">
+                        <div class="card-body">
+                            <h5 class="card-title"><a href="">Development Banking Principles</a></h5>
+                            <img src="images/Dummy Man.jpg" alt="speakers photo">
+                            <p class="card-text">Ms. Tinette O. Arenas<br><span>Information Tech Head</span></p>
                             <a href="#" class="btn btn-primary online--course--btn">Enroll Now!</a>
                         </div>
                     </div>
@@ -82,11 +106,11 @@
                 <div class="col col-xl-3 col-xxs col-md-6 col-sm-12">
                     <div class="card">
                         <p class="course--lesson"><span>10</span> Lessons</p>
-                        <img src="images/Sample Course.jpg" class="card-img-top" alt="">
+                        <img src="images/oimg4.jpg" class="card-img-top" alt="">
                         <div class="card-body">
-                            <h5 class="card-title"><a href="">Developing Environmental and Social Management...</a></h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam,
-                                qui.</p>
+                            <h5 class="card-title"><a href="">Introduction to Time Management</a></h5>
+                            <img src="images/Dummy Man.jpg" alt="speakers photo">
+                            <p class="card-text">Mr. Marvin C. Garcia<br><span>IT Specialist</span></p>
                             <a href="#" class="btn btn-primary online--course--btn">Enroll Now!</a>
                         </div>
                     </div>
@@ -94,11 +118,35 @@
                 <div class="col col-xl-3 col-xxs col-md-6 col-sm-12">
                     <div class="card">
                         <p class="course--lesson"><span>10</span> Lessons</p>
-                        <img src="images/Sample Course.jpg" class="card-img-top" alt="">
+                        <img src="images/oimg2.jpg" class="card-img-top" alt="">
                         <div class="card-body">
-                            <h5 class="card-title"><a href="">Developing Environmental and Social Management...</a></h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam,
-                                qui.</p>
+                            <h5 class="card-title"><a href="https://www.adfiapanex.info/courses/development-banking-101/">Developing an Environmental and Social Risk Management...</a></h5>
+                            <img src="images/Dummy Man.jpg" alt="speakers photo">
+                            <p class="card-text">Mr. Enrique I. Florencio<br><span>Secretary General</span></p>
+                            <a href="https://www.adfiapanex.info/courses/development-banking-101/" class="btn btn-primary online--course--btn">Enroll Now!</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col col-xl-3 col-xxs col-md-6 col-sm-12">
+                    <div class="card">
+                        <p class="course--lesson"><span>10</span> Lessons</p>
+                        <img src="images/oimg3.jpg" class="card-img-top" alt="">
+                        <div class="card-body">
+                            <h5 class="card-title"><a href="https://www.adfiapanex.info/courses/mobile-photography-101/">Mobile Photography 101</a></h5>
+                            <img src="images/Dummy Man.jpg" alt="speakers photo">
+                            <p class="card-text">Mr. Rem Laodeño<br><span>IT Specialist</span></p>
+                            <a href="https://www.adfiapanex.info/courses/mobile-photography-101/" class="btn btn-primary online--course--btn">Enroll Now!</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col col-xl-3 col-xxs col-md-6 col-sm-12">
+                    <div class="card">
+                        <p class="course--lesson"><span>10</span> Lessons</p>
+                        <img src="images/oimg1.jpg" class="card-img-top" alt="">
+                        <div class="card-body">
+                            <h5 class="card-title"><a href="">Development Banking Principles</a></h5>
+                            <img src="images/Dummy Man.jpg" alt="speakers photo">
+                            <p class="card-text">Ms. Tinette O. Arenas<br><span>Information Tech Head</span></p>
                             <a href="#" class="btn btn-primary online--course--btn">Enroll Now!</a>
                         </div>
                     </div>
@@ -106,59 +154,11 @@
                 <div class="col col-xl-3 col-xxs col-md-6 col-sm-12">
                     <div class="card">
                         <p class="course--lesson"><span>10</span> Lessons</p>
-                        <img src="images/Sample Course.jpg" class="card-img-top" alt="">
+                        <img src="images/oimg4.jpg" class="card-img-top" alt="">
                         <div class="card-body">
-                            <h5 class="card-title"><a href="">Developing Environmental and Social Management...</a></h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam,
-                                qui.</p>
-                            <a href="#" class="btn btn-primary online--course--btn">Enroll Now!</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col col-xl-3 col-xxs col-md-6 col-sm-12">
-                    <div class="card">
-                        <p class="course--lesson"><span>10</span> Lessons</p>
-                        <img src="images/Sample Course.jpg" class="card-img-top" alt="">
-                        <div class="card-body">
-                            <h5 class="card-title"><a href="">Developing Environmental and Social Management...</a></h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam,
-                                qui.</p>
-                            <a href="#" class="btn btn-primary online--course--btn">Enroll Now!</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col col-xl-3 col-xxs col-md-6 col-sm-12">
-                    <div class="card">
-                        <p class="course--lesson"><span>10</span> Lessons</p>
-                        <img src="images/Sample Course.jpg" class="card-img-top" alt="">
-                        <div class="card-body">
-                            <h5 class="card-title"><a href="">Developing Environmental and Social Management...</a></h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam,
-                                qui.</p>
-                            <a href="#" class="btn btn-primary online--course--btn">Enroll Now!</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col col-xl-3 col-xxs col-md-6 col-sm-12">
-                    <div class="card">
-                        <p class="course--lesson"><span>10</span> Lessons</p>
-                        <img src="images/Sample Course.jpg" class="card-img-top" alt="">
-                        <div class="card-body">
-                            <h5 class="card-title"><a href="">Developing Environmental and Social Management...</a></h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam,
-                                qui.</p>
-                            <a href="#" class="btn btn-primary online--course--btn">Enroll Now!</a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col col-xl-3 col-xxs col-md-6 col-sm-12">
-                    <div class="card">
-                        <p class="course--lesson"><span>10</span> Lessons</p>
-                        <img src="images/Sample Course.jpg" class="card-img-top" alt="">
-                        <div class="card-body">
-                            <h5 class="card-title"><a href="">Developing Environmental and Social Management...</a></h5>
-                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam,
-                                qui.</p>
+                            <h5 class="card-title"><a href="">Introduction to Time Management</a></h5>
+                            <img src="images/Dummy Man.jpg" alt="speakers photo">
+                            <p class="card-text">Mr. Marvin C. Garcia<br><span>IT Specialist</span></p>
                             <a href="#" class="btn btn-primary online--course--btn">Enroll Now!</a>
                         </div>
                     </div>
