--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
                     <a href="news.html" class="menu--link">News</a>
                 </li>
                 <li class="menu--item">
-                    <a href="contact.html" class="menu--link">Contact</a>
+                    <a href="contact.html" class="menu--link actived--menu">Contact</a>
                 </li>
             </ul>
             <div class="hamburger">
