--- a/course.html
+++ b/course.html
@@ -31,7 +31,7 @@
                     <a href="events.html" class="menu--link">Events</a>
                 </li>
                 <li class="menu--item">
-                    <a href="course.html" class="menu--link">Courses</a>
+                    <a href="course.html" class="menu--link actived--menu">Courses</a>
                 </li>
                 <li class="menu--item">
                     <a href="testimonials.html" class="menu--link">Testimonials</a>
