--- a/events.html
+++ b/events.html
@@ -28,7 +28,7 @@
                     <a href="about.html" class="menu--link">About</a>
                 </li>
                 <li class="menu--item">
-                    <a href="events.html" class="menu--link">Events</a>
+                    <a href="events.html" class="menu--link actived--menu">Events</a>
                 </li>
                 <li class="menu--item">
                     <a href="course.html" class="menu--link">Courses</a>
