--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="#" class="nav--logo"><img src="images/IDF.jpg" alt=""></a>
             <ul class="nav--menu">
                 <li class="menu--item">
-                    <a href="index.html" class="menu--link">Home</a>
+                    <a href="index.html" class="menu--link actived--menu">Home</a>
                 </li>
                 <li class="menu--item">
                     <a href="about.html" class="menu--link">About</a>
