--- a/news.html
+++ b/news.html
@@ -36,7 +36,7 @@
                     <a href="testimonials.html" class="menu--link">Testimonials</a>
                 </li>
                 <li class="menu--item">
-                    <a href="news.html" class="menu--link">News</a>
+                    <a href="news.html" class="menu--link actived--menu">News</a>
                 </li>
                 <li class="menu--item">
                     <a href="contact.html" class="menu--link">Contact</a>
