--- a/testimonials.html
+++ b/testimonials.html
@@ -34,7 +34,7 @@
                     <a href="course.html" class="menu--link">Courses</a>
                 </li>
                 <li class="menu--item">
-                    <a href="testimonials.html" class="menu--link">Testimonials</a>
+                    <a href="testimonials.html" class="menu--link actived--menu">Testimonials</a>
                 </li>
                 <li class="menu--item">
                     <a href="news.html" class="menu--link">News</a>
