--- a/news.html
+++ b/news.html
@@ -16,6 +16,14 @@
 </head>
 
 <body>
+    
+    <div class="adfiap--site--btn fixed-middle">
+        <i class="fas fa-3x fa-home"></i>
+        <div class="adfiap--btn--content">
+          <a href="https://www.adfiap.org"><p>ADFIAP Homepage</p></a>
+        </div>  
+    </div>
+    
    <header class="header sticky-top">
         <nav class="navbar ">
             <a href="#" class="nav--logo"><img src="images/IDF.jpg" alt=""></a>
